Extract Breadcrumbs component a fix gap between items

--- a/src/common/Navbar/styles.scss
+++ b/src/common/Navbar/styles.scss
@@ -10,7 +10,3 @@
   display: flex;
   justify-content: space-between;
 }
-
-.crumbs {
-  margin: 1rem 0;
-}
